change message board

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -101,7 +101,7 @@
             <!-- Task List -->
             <div class="row">
                 <div class="col-md-8 mx-auto">
-                    <!-- Tasks will be dynamically added here -->
+                    <!-- Tasks will be dynamically added-->
                 </div>
             </div>
         </div>
