--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,7 +29,7 @@
                             <a class="nav-link active" href="#">Dashboard</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./login.html">Message Board</a>
+                            <a class="nav-link" href="./message.html">Message Board</a>
                         </li>
                     </ul>
                 </div>
