debug fix filter func

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,12 +60,13 @@
                                     <div class="col-md-4">
                                         <select class="form-select" id="taskCategory" required>
                                             <option value="">Category</option>
-                                            <option value="applications">Job Applications</option>
+                                            <option value="job_search">Job Search</option>
+                                            <option value="applications">Applications</option>
                                             <option value="interviews">Interviews</option>
+                                            <option value="skill_dev">Skill Development</option>
                                             <option value="networking">Networking</option>
-                                            <option value="skills">Skill Development</option>
-                                            <option value="documents">Career Documents</option>
                                         </select>
+
                                     </div>
                                     <div class="col-md-4">
                                         <input type="date" class="form-control" id="taskDueDate" required>
