fix bugs of filter

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -62,7 +62,7 @@
                                             <option value="">Category</option>
                                             <option value="applications">Applications</option>
                                             <option value="interviews">Interviews</option>
-                                            <option value="skill_dev">Skill Development</option>
+                                            <option value="skills">Skill Development</option>
                                             <option value="networking">Networking</option>
                                         </select>
 
@@ -92,7 +92,6 @@
                             <button type="button" class="btn btn-filter">Interviews</button>
                             <button type="button" class="btn btn-filter">Networking</button>
                             <button type="button" class="btn btn-filter">Skills</button>
-                            <button type="button" class="btn btn-filter">Documents</button>
                         </div>
                     </div>
                 </div>
