--- a/frontend/message.html
+++ b/frontend/message.html
@@ -30,6 +30,11 @@
                 <span id="pageInfo">Page 1 of 1</span>
                 <button id="nextButton" disabled>Next</button>
             </div>
+            <!-- <div class="pagination">
+                <button id="prevButton">Previous</button>
+                <span id="currentPage">Page 1 of 1</span>
+                <button id="nextButton">Next</button>
+              </div> -->
             <a href="./index.html" class="back-button">
                 Back to CareerPath
             </a>
