--- a/frontend/message.html
+++ b/frontend/message.html
@@ -27,7 +27,7 @@
             <!-- Pagination -->
             <div class="pagination">
                 <button id="prevButton" disabled>Previous</button>
-                <span id="pageInfo">Page 1 of 1</span>
+                <span id="pageInfo">Page </span>
                 <button id="nextButton" disabled>Next</button>
             </div>
             <!-- <div class="pagination">
