--- a/frontend/message.html
+++ b/frontend/message.html
@@ -4,7 +4,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <title>Motivational Message Board</title>
+        <link rel="icon" href="./image/images.png">
+
         <link href="./css/message.css" rel="stylesheet">
 
     </head>
